update yml recipe license

--- a/src/main/resources/META-INF/rewrite/base-eslint.yml
+++ b/src/main/resources/META-INF/rewrite/base-eslint.yml
@@ -1,8 +1,16 @@
-#
 # Copyright 2025 the original author or authors.
-# 
-# Moderne Proprietary. Only for use by Moderne customers under the terms of a commercial contract.
-#
+# <p>
+# Licensed under the Moderne Source Available License (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+# <p>
+# https://docs.moderne.io/licensing/moderne-source-available-license
+# <p>
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
 
 ---
 type: specs.openrewrite.org/v1beta/recipe
@@ -30,7 +38,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.CapitalizedComments
-displayName: Enforce or disallow capitalization of the first letter of a comment 
+displayName: Enforce or disallow capitalization of the first letter of a comment
 description: |
   Enforce or disallow capitalization of the first letter of a comment 
   See [rule details](https://eslint.org/docs/latest/rules/capitalized-comments)
@@ -53,7 +61,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.Curly
-displayName: Enforce consistent brace style for all control statements 
+displayName: Enforce consistent brace style for all control statements
 description: |
   Enforce consistent brace style for all control statements 
   See [rule details](https://eslint.org/docs/latest/rules/curly)
@@ -76,7 +84,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.DotNotation
-displayName: Enforce dot notation whenever possible 
+displayName: Enforce dot notation whenever possible
 description: |
   Enforce dot notation whenever possible 
   See [rule details](https://eslint.org/docs/latest/rules/dot-notation)
@@ -99,7 +107,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.Eqeqeq
-displayName: Require the use of `===` and `!==` 
+displayName: Require the use of `===` and `!==`
 description: |
   Require the use of `===` and `!==` 
   See [rule details](https://eslint.org/docs/latest/rules/eqeqeq)
@@ -122,7 +130,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.LogicalAssignmentOperators
-displayName: Require or disallow logical assignment operator shorthand 
+displayName: Require or disallow logical assignment operator shorthand
 description: |
   Require or disallow logical assignment operator shorthand 
   See [rule details](https://eslint.org/docs/latest/rules/logical-assignment-operators)
@@ -145,7 +153,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.MultilineCommentStyle
-displayName: Enforce a particular style for multiline comments 
+displayName: Enforce a particular style for multiline comments
 description: |
   Enforce a particular style for multiline comments 
   See [rule details](https://eslint.org/docs/latest/rules/multiline-comment-style)
@@ -168,7 +176,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.NoDivRegex
-displayName: Disallow equal signs explicitly at the beginning of regular expressions 
+displayName: Disallow equal signs explicitly at the beginning of regular expressions
 description: |
   Disallow equal signs explicitly at the beginning of regular expressions 
   See [rule details](https://eslint.org/docs/latest/rules/no-div-regex)
@@ -191,7 +199,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.NoElseReturn
-displayName: Disallow else blocks after return statements in if statements 
+displayName: Disallow else blocks after return statements in if statements
 description: |
   Disallow else blocks after return statements in if statements 
   See [rule details](https://eslint.org/docs/latest/rules/no-else-return)
@@ -214,7 +222,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.NoExtraBind
-displayName: Disallow unnecessary calls to `.bind()` 
+displayName: Disallow unnecessary calls to `.bind()`
 description: |
   Disallow unnecessary calls to `.bind()` 
   See [rule details](https://eslint.org/docs/latest/rules/no-extra-bind)
@@ -237,7 +245,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.NoExtraLabel
-displayName: Disallow unnecessary labels 
+displayName: Disallow unnecessary labels
 description: |
   Disallow unnecessary labels 
   See [rule details](https://eslint.org/docs/latest/rules/no-extra-label)
@@ -260,7 +268,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.NoImplicitCoercion
-displayName: Disallow shorthand type conversions 
+displayName: Disallow shorthand type conversions
 description: |
   Disallow shorthand type conversions 
   See [rule details](https://eslint.org/docs/latest/rules/no-implicit-coercion)
@@ -283,7 +291,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.NoLonelyIf
-displayName: Disallow if statements as the only statement in else blocks 
+displayName: Disallow if statements as the only statement in else blocks
 description: |
   Disallow if statements as the only statement in else blocks 
   See [rule details](https://eslint.org/docs/latest/rules/no-lonely-if)
@@ -306,7 +314,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.NoUndefInit
-displayName: Disallow initializing variables to undefined 
+displayName: Disallow initializing variables to undefined
 description: |
   Disallow initializing variables to undefined 
   See [rule details](https://eslint.org/docs/latest/rules/no-undef-init)
@@ -329,7 +337,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.NoUnneededTernary
-displayName: Disallow ternary operators when simpler alternatives exist 
+displayName: Disallow ternary operators when simpler alternatives exist
 description: |
   Disallow ternary operators when simpler alternatives exist 
   See [rule details](https://eslint.org/docs/latest/rules/no-unneeded-ternary)
@@ -352,7 +360,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.NoUselessComputedKey
-displayName: Disallow unnecessary computed property keys in objects and classes 
+displayName: Disallow unnecessary computed property keys in objects and classes
 description: |
   Disallow unnecessary computed property keys in objects and classes 
   See [rule details](https://eslint.org/docs/latest/rules/no-useless-computed-key)
@@ -398,7 +406,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.NoUselessReturn
-displayName: Disallow redundant return statements 
+displayName: Disallow redundant return statements
 description: |
   Disallow redundant return statements 
   See [rule details](https://eslint.org/docs/latest/rules/no-useless-return)
@@ -421,7 +429,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.NoVar
-displayName: Require `let` or `const` instead of `var` 
+displayName: Require `let` or `const` instead of `var`
 description: |
   Require `let` or `const` instead of `var` 
   See [rule details](https://eslint.org/docs/latest/rules/no-var)
@@ -444,7 +452,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.ObjectShorthand
-displayName: Require or disallow method and property shorthand syntax for object literals 
+displayName: Require or disallow method and property shorthand syntax for object literals
 description: |
   Require or disallow method and property shorthand syntax for object literals 
   See [rule details](https://eslint.org/docs/latest/rules/object-shorthand)
@@ -467,7 +475,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.OneVar
-displayName: Enforce variables to be declared either together or separately in functions 
+displayName: Enforce variables to be declared either together or separately in functions
 description: |
   Enforce variables to be declared either together or separately in functions 
   See [rule details](https://eslint.org/docs/latest/rules/one-var)
@@ -490,7 +498,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.OperatorAssignment
-displayName: Require or disallow assignment operator shorthand where possible 
+displayName: Require or disallow assignment operator shorthand where possible
 description: |
   Require or disallow assignment operator shorthand where possible 
   See [rule details](https://eslint.org/docs/latest/rules/operator-assignment)
@@ -513,7 +521,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.PreferArrowCallback
-displayName: Require using arrow functions for callbacks 
+displayName: Require using arrow functions for callbacks
 description: |
   Require using arrow functions for callbacks 
   See [rule details](https://eslint.org/docs/latest/rules/prefer-arrow-callback)
@@ -536,7 +544,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.PreferConst
-displayName: Require const declarations for variables that are never reassigned after declared 
+displayName: Require const declarations for variables that are never reassigned after declared
 description: |
   Require const declarations for variables that are never reassigned after declared 
   See [rule details](https://eslint.org/docs/latest/rules/prefer-const)
@@ -559,7 +567,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.PreferDestructuring
-displayName: Require destructuring from arrays and/or objects 
+displayName: Require destructuring from arrays and/or objects
 description: |
   Require destructuring from arrays and/or objects 
   See [rule details](https://eslint.org/docs/latest/rules/prefer-destructuring)
@@ -582,7 +590,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.PreferExponentiationOperator
-displayName: Disallow the use of `Math.pow` in favor of the ** operator 
+displayName: Disallow the use of `Math.pow` in favor of the ** operator
 description: |
   Disallow the use of `Math.pow` in favor of the ** operator 
   See [rule details](https://eslint.org/docs/latest/rules/prefer-exponentiation-operator)
@@ -605,7 +613,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.PreferNumericLiterals
-displayName: Disallow `parseInt()` and `Number.parseInt()` in favor of binary, octal, and hexadecimal literals 
+displayName: Disallow `parseInt()` and `Number.parseInt()` in favor of binary, octal, and hexadecimal literals
 description: |
   Disallow `parseInt()` and `Number.parseInt()` in favor of binary, octal, and hexadecimal literals 
   See [rule details](https://eslint.org/docs/latest/rules/prefer-numeric-literals)
@@ -628,7 +636,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.PreferObjectHasOwn
-displayName: Disallow use of `Object.prototype.hasOwnProperty.call()` and prefer use of `Object.hasOwn(`) 
+displayName: Disallow use of `Object.prototype.hasOwnProperty.call()` and prefer use of `Object.hasOwn(`)
 description: |
   Disallow use of `Object.prototype.hasOwnProperty.call()` and prefer use of `Object.hasOwn(`) 
   See [rule details](https://eslint.org/docs/latest/rules/prefer-object-has-own)
@@ -651,7 +659,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.PreferObjectSpread
-displayName: Disallow using `Object.assign` with an object literal as the first argument and prefer the use of object spread instead 
+displayName: Disallow using `Object.assign` with an object literal as the first argument and prefer the use of object spread instead
 description: |
   Disallow using `Object.assign` with an object literal as the first argument and prefer the use of object spread instead 
   See [rule details](https://eslint.org/docs/latest/rules/prefer-object-spread)
@@ -674,7 +682,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.PreferTemplate
-displayName: Require template literals instead of string concatenation 
+displayName: Require template literals instead of string concatenation
 description: |
   Require template literals instead of string concatenation 
   See [rule details](https://eslint.org/docs/latest/rules/prefer-template)
@@ -697,7 +705,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.SortImports
-displayName: Enforce sorted import declarations within modules 
+displayName: Enforce sorted import declarations within modules
 description: |
   Enforce sorted import declarations within modules 
   See [rule details](https://eslint.org/docs/latest/rules/sort-imports)
@@ -720,7 +728,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.SortVars
-displayName: Require variables within the same declaration block to be sorted 
+displayName: Require variables within the same declaration block to be sorted
 description: |
   Require variables within the same declaration block to be sorted 
   See [rule details](https://eslint.org/docs/latest/rules/sort-vars)
@@ -743,7 +751,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.Strict
-displayName: Require or disallow strict mode directives 
+displayName: Require or disallow strict mode directives
 description: |
   Require or disallow strict mode directives 
   See [rule details](https://eslint.org/docs/latest/rules/strict)
@@ -789,7 +797,7 @@ recipeList:
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: org.openrewrite.codemods.cleanup.javascript.UnicodeBom
-displayName: Require or disallow Unicode byte order mark (BOM) 
+displayName: Require or disallow Unicode byte order mark (BOM)
 description: |
   Require or disallow Unicode byte order mark (BOM) 
   See [rule details](https://eslint.org/docs/latest/rules/unicode-bom)
