--- a/src/main/resources/codemods/package.json
+++ b/src/main/resources/codemods/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-unicorn": "^51.0.1",
     "eslint-plugin-vue": "^9.21.1",
     "eslint-webpack-plugin": "^4.0.1",
+    "jscodeshift": "^0.16.1",
     "putout": "^36.9.0",
     "react": "^18.3.1",
     "react-declassify": "^0.2.0",
