--- a/src/main/resources/codemods/package.json
+++ b/src/main/resources/codemods/package.json
@@ -9,7 +9,7 @@
     "@stylistic/eslint-plugin": "1.6.1",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
-    "@ui5/linter": "1.7.0",
+    "@ui5/linter": "^1.12.0",
     "5to6-codemod": "1.8.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
