--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,17 +20,7 @@ concurrency:
 
 jobs:
   build:
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/setup-node@v4
-      with:
-        node-version: 20
-        cache: 'npm'
-    - uses: openrewrite/gh-automation/.github/workflows/ci-gradle.yml@main
-      secrets:
-        gradle_enterprise_access_key: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
-        gradle_enterprise_cache_username: ${{ secrets.GRADLE_ENTERPRISE_CACHE_USERNAME }}
-        gradle_enterprise_cache_password: ${{ secrets.GRADLE_ENTERPRISE_CACHE_PASSWORD }}
-        ossrh_username: ${{ secrets.OSSRH_USERNAME }}
-        ossrh_token: ${{ secrets.OSSRH_TOKEN }}
-        ossrh_signing_key: ${{ secrets.OSSRH_SIGNING_KEY }}
-        ossrh_signing_password: ${{ secrets.OSSRH_SIGNING_PASSWORD }}
+      - id: node-build
+        uses: ./.github/actions/ci-node
