--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,4 +23,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - id: node-build
-        uses: ./.github/actions/ci-node
+        uses: ./.github/actions/node
