feat: add ReactI18Next recipe for jscodeshift-react-i18next integration
- Add ReactI18Next recipe extending NodeBasedRecipe
- Support for react-i18next internationalization transforms
- Configurable translation file path, root key, file patterns, and parser
- Automatically creates and manages translations.json file
- Includes comprehensive test suite with component transformation examples
- Add required npm dependencies: jscodeshift-react-i18next, slugify, lodash, json-stable-stringify

--- a/src/main/resources/codemods/package.json
+++ b/src/main/resources/codemods/package.json
@@ -4,6 +4,10 @@
     "@kevinbarabash/codemods": "github:kevinbarabash/codemods",
     "@mui/codemod": "6.0.0",
     "@next/codemod": "^14.0.4",
+    "jscodeshift-react-i18next": "github:BartoszJarocki/jscodeshift-react-i18next",
+    "json-stable-stringify": "^1.0.2",
+    "lodash": "^4.17.21",
+    "slugify": "^1.6.5",
     "@next/eslint-plugin-next": "^14.1.0",
     "@putout/processor-typescript": "^10.0.0",
     "@stylistic/eslint-plugin": "1.6.1",
